# zentop

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  main.rs
src/event/: handler.rs  mod.rs
src/stats/: collector.rs  mod.rs  types.rs
src/topology/: detector.rs  mod.rs  types.rs  zen.rs
src/ui/: layout.rs  mod.rs  renderer.rs  theme.rs
src/ui/views/: ccd_view.rs  core_view.rs  mod.rs  nps_view.rs  numa_view.rs
src/ui/widgets/: cpu_bar.rs  header.rs  help.rs  mod.rs
